# terrorblade

./: .env.example  .gitignore  .gitmodules  DialogueAnalyzer.py  Dockerfile  LICENSE  Makefile  README.md  REQUIREMENTS.md  THOTH_OPTIONAL_CHANGES.md  TelegramPreprocessor.py  TextPreprocessor.py  dtypes.py  find_clusters.py  main.py  parse_telegram.py  pyproject.toml  requirements-cuda.in  requirements-dev.in  requirements.in  requirements.txt  ЛИЦЕНЗИЯ
.github/workflows/: ci.yml  pylint.yml  security.yml
docs/: DATABASE_SCHEMA.md
fun/: MERGE_REQUEST.md  project_vision.md
make/: build.mk  cli.mk  common.mk  deploy.mk  development.mk  docs.mk  modules.mk  requirements.mk  security.mk  test.mk
prototypes/: topic_extraction.py
qdrant_db/: meta.json
reports/docs/: RELEASE_NOTES_v0.2.0.md
scripts/: animal_message_transformer.py  build-docs.sh  check-docs.sh  check-docstrings.py  enhance-docstrings.py  generate-api-docs.py  install-minimal.sh  install.sh  requirements-cuda.in  requirements-dev.in  requirements.in  run-ci-locally.sh  serve-docs.sh  setup-docs.sh  setup-mcp-service.sh  test-install.sh
src/data/core/: DialogueAnalyzer.py
src/data/loaders/telegram/: TelegramPreprocessor.py  parse_telegram_client.py  parse_telegram_html.py  parse_telegram_json.py
terrorblade/: __init__.py  main.py
terrorblade/data/: dtypes.py
terrorblade/data/core/: DialogueAnalyzer.py
terrorblade/data/database/: session_manager.py  telegram_database.py  vector_store.py
terrorblade/data/loaders/telegram/: parse_telegram_client.py  parse_telegram_html.py  parse_telegram_json.py
terrorblade/data/preprocessing/: TelegramPreprocessor.py  TextPreprocessor.py
terrorblade/examples/: __init__.py  analyze_dialogues.py  cluster_analysis_cli.py  cluster_analysis_simple_tui.py  create_db_from_tg_account.py  create_db_from_tg_json.py  fast_cluster_reprocessing.py  multi_provider_benchmark.py  vector_search_example.py
terrorblade/examples/prompts/: prompt_1.md  prompt_2.md  promptinator.py  provider_configs.py
terrorblade/mcp/: README.md  __init__.py  llms.txt  server.py  terrorblade-mcp.service
terrorblade/tests/: test_preprocessors.py  test_telegram_flood_errors.py
terrorblade/tui/: README.md
terrorblade/tui/modules/: __init__.py  chat_selector.py  logging_terminal.py  message_analyzer.py  optimized_tui.py  test_modules.py
terrorblade/utils/: config.py  logger.py
tests/: test_animal_transformer.py  test_cluster_analysis_cli.py  test_cluster_analysis_simple.py  test_mcp_server.py  test_preprocessors.py  test_telegram_flood_errors.py  test_vector_search.py
tests/data/: messages_test_animals.json
thoth/: .env.template  README.md  TODO  pyproject.toml
thoth/qdrant_db/: meta.json
thoth/tests/: README.md  conftest.py  test_analysis.py  test_analyzer_init.py  test_data_import.py  test_search.py  test_topic_analysis.py  test_user_analysis.py
thoth/thoth/: __init__.py  analyzer.py  demo.py  main.py  utils.py
