[project]
name = "thoth"
version = "0.1.0"
description = "Data analysis package for Telegram message embeddings"
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
keywords = ["data analysis", "embeddings", "vector database", "telegram"]
authors = [
    { name = "Vsevolod Prudius", email = "sevapru@gmail.com" }
]
maintainers = [
    { name = "Vsevolod Prudius", email = "sevapru@gmail.com" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "terrorblade",
    "polars>=0.19.0",
    "duckdb>=0.9.0",
    "numpy>=1.24.0",
    "sentence-transformers>=2.2.2",
    "pyarrow>=13.0.0",
    "scikit-learn>=1.3.0",
    "networkx>=3.0.0",
    "torch>=2.0.0",
    "qdrant-client>=1.6.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.2",
    "scipy>=1.11.0",
    "textblob>=0.17.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.5.0",
    "ruff>=0.0.275",
]

[project.scripts]
thoth = "thoth.main:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project.urls]
"Homepage" = "https://github.com/yourusername/thoth"
"Bug Tracker" = "https://github.com/yourusername/thoth/issues"

[tool.pytest]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "--cov=thoth"

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.coverage.run]
source = ["thoth"]
omit = ["*/tests/*", "*/setup.py", "*/__main__.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "pass",
    "raise ImportError",
]

[tool.isort]
profile = "black"
line_length = 100

[tool.black]
line-length = 100
target-version = ["py312"]
include = '\.pyi?$'

[tool.mypy]
python_version = "3.12"
warn_redundant_casts = true
warn_unused_ignores = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_reexport = true
disallow_untyped_defs = true

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "B",   # flake8-bugbear
]
ignore = ["E501", "B008"] 